test/tests/operators/match/error_list_rest_duplicate.txt
error: list pattern rest appears more than once
 --> tests/operators/match/error_list_rest_duplicate.tql:7:4
  |
7 |   [.., ..] => {
  |    ^^ 
  |
